# BG1-Engine

./: .gitignore  .gitmodules
Engine/: CMakeLists.txt  Session.vim  glad.c
Engine/dependencies/include/public/glad/: glad.h
Engine/src/: buffer.cpp  engine.cpp  includes.h  log.cpp  material.cpp  mesh.cpp  shader.cpp  texture.cpp
Engine/src/include/: buffer.h  engine.h  log.h  material.h  mesh.h  shader.h  texture.h
Game/: CMakeLists.txt  Session.vim  main.cpp  makefile
Game/assets/shaders/: basic.frag  basic.vert
Game/resources/shaders/: basic.vert
Game/src/: main.cpp
